[package]
name = "one-wire-bus-2"
version = "0.1.1"
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Dan Brown"]
license = "MIT/Apache-2.0"
repository = "https://github.com/dbdoesnerdstuff/one-wire-bus-2"
edition = "2018"
keywords = ["embedded", "onewire", "embedded-hal-driver", "1wire"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust implementation of the 1-Wire protocol for embedded-hal
"""

[dependencies]
embedded-hal = "1.0.0"